# c-periphery

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  ChangeLog.md  LICENSE  Makefile  README.md
.github/workflows/: build.yml  buildroot.yml  cmake.yml
docs/: backlight.md  gpio.md  i2c.md  led.md  mmio.md  serial.md  spi.md
src/: backlight.c  backlight.h  gpio.c  gpio.h  gpio_cdev_v1.c  gpio_cdev_v2.c  gpio_internal.h  gpio_sysfs.c  i2c.c  i2c.h  led.c  led.h  libperiphery.pc.in  mmio.c  mmio.h  pwm.c  pwm.h  serial.c  serial.h  spi.c  spi.h  version.c  version.h  version.h.in
tests/: CMakeLists.txt  test.h  test_backlight.c  test_gpio.c  test_gpio_sysfs.c  test_i2c.c  test_led.c  test_mmio.c  test_pwm.c  test_serial.c  test_spi.c
